nova_tests/strings/neg/plan137_p01_neg_protocol_renamed_hashable.nv
// EXPECT_COMPILE_ERROR E_PROTOCOL_RENAMED
//
// Plan 137 (D237) — NEG P01:
// `#impl(Hashable)` → E_PROTOCOL_RENAMED: use `#impl(Hash)`.
module neg.plan137_p01_neg_protocol_renamed_hashable

#impl(Hashable)
type Foo {
    x int
}

test "Hashable is renamed to Hash" {
    ro f = Foo { x: 1 }
    assert(f.x == 1)
}
